force-app/main/default/objects/FN__FindNearby__c/FN__FindNearby__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FindNearbySettings</label>
</CustomObject>