force-app/main/default/objects/FN__FindNearby__c/fields/FN__Accounts__c.field-meta.xml
<CustomField>
    <fullName>FN__Accounts__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Do you want Accounts located and displayed on a map?</inlineHelpText>
    <label>Accounts</label>
    <type>Checkbox</type>
</CustomField>