force-app/main/default/objects/FN__FindNearby__c/fields/FN__Accuracy__c.field-meta.xml
<CustomField>
    <fullName>FN__Accuracy__c</fullName>
    <defaultValue>7</defaultValue>
    <inlineHelpText>How Accurate do you require the Geolocation to be? 

The Higher the number, the higher the quality threshold on Addresses. 

Values should only be:(1-9)  Recommend 7.

1 - Country 
4 - Postal Code
9 - Specific Building</inlineHelpText>
    <label>Accuracy</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>