force-app/main/default/objects/FN__FindNearby__c/fields/FN__Contacts__c.field-meta.xml
<CustomField>
    <fullName>FN__Contacts__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Do you want Contacts located and displayed on a map?</inlineHelpText>
    <label>Contacts</label>
    <type>Checkbox</type>
</CustomField>