force-app/main/default/objects/FN__FindNearby__c/fields/FN__GKey__c.field-meta.xml
<CustomField>
    <fullName>FN__GKey__c</fullName>
    <label>GKey</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>