force-app/main/default/objects/FN__FindNearby__c/fields/FN__How_Many__c.field-meta.xml
<CustomField>
    <fullName>FN__How_Many__c</fullName>
    <defaultValue>15</defaultValue>
    <inlineHelpText>How many records of each type can show up on a map at any one time. (1-200 recommended)</inlineHelpText>
    <label>How Many</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>