force-app/main/default/objects/FN__FindNearby__c/fields/FN__Leads__c.field-meta.xml
<CustomField>
    <fullName>FN__Leads__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Do you want Leads to be located and displayed on the maps?</inlineHelpText>
    <label>Leads</label>
    <type>Checkbox</type>
</CustomField>